# pamplejuce

./: .gitignore  .gitmodules  Audio.md  CMakeLists.txt  README.md  install.sh
source/: AudioSettings.h  Config.h  MainApplication.cpp  MainAudioProcessor.cpp  MainAudioProcessor.h
source/Api/: ApiService.cpp  WebSocketService.cpp  WebSocketService.h
source/Common/: CircularBuffer.h  CrashHandler.h  EventManager.h  Events.h  OpusEncoderWrapper.h  OpusFileHandler.h  RTPWrapper.h  ResamplerWrapper.h  WavFileHandler.h
source/Debug/: DebugApplication.h
source/Gui/: MainPageComponent.cpp  MainPageComponent.h  OutputDevice.h
source/Rtc/: WebRTCConnexionState.cpp  WebRTCConnexionState.h
source/RtcReceiver/: WebRTCAudioReceiverService.cpp  WebRTCAudioReceiverService.h  WebRTCReceiverConnexionHandler.cpp  WebRTCReceiverConnexionHandler.h
source/RtcSender/: WebRTCAudioSenderSendingHandler.cpp  WebRTCAudioSenderSendingHandler.h  WebRTCAudioSenderService.cpp  WebRTCAudioSenderService.h  WebRTCSenderConnexionHandler.cpp  WebRTCSenderConnexionHandler.h
